--- a/Apex.WebAPI/Web.config
+++ b/Apex.WebAPI/Web.config
@@ -9,8 +9,8 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
 	<connectionStrings>
-		<add name="ApexDbConnectionString" connectionString="data source=localhost\sqlexpress;initial catalog=ApexDB;user id=ApexDBUser;password=issi1234;" providerName="System.Data.SqlClient" />
-		<add name="ApexDBContext" connectionString="data source=localhost\sqlexpress;initial catalog=ApexDB;user id=ApexDBUser;password=issi1234;persist security info=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="ApexDbConnectionString" connectionString="data source=xxx\xxx;initial catalog=xxx;user id=xxx;password=xxx;" providerName="System.Data.SqlClient" />
+		<add name="ApexDBContext" connectionString="data source=xxx\xxx;initial catalog=xxx;user id=xxx;password=xxx;persist security info=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<add key="WebsiteBaseURL" value="http://localhost:8092" />
